--- a/src/main/resources/templates/addTransactionForm.html
+++ b/src/main/resources/templates/addTransactionForm.html
@@ -1,69 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8" />
 <title>Insert title here</title>
 <link 
-href="../static/css/bootstrap.min.css"
-th:href="@{/css/bootstrap.min.css}" 
-type="text/css" 
-rel="stylesheet"
-
-/>
+	th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet" />
+	
+    <script th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
 
-<header>
+	<header>
+		<div class="row">
+			<div class="center col-md-6 text-center" style="font-size: 40px; margin-top: 60px;">System serwisu komputerowego</div>
+			<div>
+			
+			<img th:src="@{/img/mother-board.jpg}" class="col-md-6 img-circle"
+				style="width: 250px; height: 200px;" />
+			</div>
+		</div>
 
-<nav class="navbar navbar-default">
-<ul>
-<li>
-tak
-</li>
-<li>
-nie
-</li>
-</ul>
-</nav>
-</header>
+		<nav class="navbar navbar-default"> 
+		 <div class="container-fluid">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Dodaj transakcje</a></li>
+				<li><a href="#">Lista transakcji</a></li>
+				<li><a href="#">Notatki</a></li>
+			</ul>
+			</div>
+		</nav>
+	</header>
 
-<main class="container">
-<form method="post" action="" th:object="${tr}">
+	<main class="container">
+	<form class="form-horizontal" method="post" action="" th:object="${tr}">
 
-<label>imie klienta</label>
-<br/>
-<input type = "text" th:field="*{clientName}"/>
-<br/>
-<label>nazwisko klienta</label>
-<br/>
-<input type = "text" th:field="*{clientLastName}"/>
-<br/>
-<label>telefon do klienta</label>
-<br/>
-<input type = "text" th:field="*{phoneNumber}"/>
-<br/>
-<label>Email klienta</label>
-<br/>
-<input type = "text" th:field="*{clientmail}"/>
-<br />
-<label>koszt</label>
-<br/>
-<input type = "text" th:field="*{price}"/>
-<br/>
-<label>numer seryjny</label>
-<br/>
-<input type = "text" th:field="*{serialNumber}"/>
-<br/>
-<label>uwagi</label>
-<br/>
-<input type = "text" th:field="*{comments}"/>
-<br/>
-<label>model</label>
-<br/>
-<input type = "text" th:field="*{model}"/>
-<br/> <br/>
-<input type = "submit" value="dodaj"/>
-</form>
-</main>
+  <div class="form-group">
+		<label for="name" class="col-sm-2 control-label">imie klienta</label> 
+		<div class="col-sm-10">
+		<input class="form-control" id="name" type="text" th:field="*{clientName}" /> 
+		</div>
+</div>
+
+			
+  <div class="form-group">		
+		<label for="lastName" class="col-sm-2 control-label">nazwisko klienta</label>
+		<div class="col-sm-10">
+		<input class="form-control" id="lastName" type="text" th:field="*{clientLastName}" />
+		</div>
+	</div> 
+			
+			
+		<label>telefon do klienta</label> 
+		<input type="text" th:field="*{phoneNumber}" /> 
+			  
+	<label>Email klienta</label> <input type="text" th:field="*{clientmail}" />
+	 <label>koszt</label>
+			   
+		<input type="text" th:field="*{price}" />
+		 <label>numer seryjny</label> <input type="text" th:field="*{serialNumber}" /> 
+		 
+		 <label>uwagi</label>
+		<input type="text" th:field="*{comments}" />  
+		
+		<label>model</label>
+		<input type="text" th:field="*{model}" />
+		
+		 <input type="submit" value="dodaj" />
+	</form>
+	</main>
 </body>
 </html>
