--- a/src/main/resources/templates/addTransactionForm.html
+++ b/src/main/resources/templates/addTransactionForm.html
@@ -23,8 +23,8 @@
 		<nav class="navbar navbar-default"> 
 		 <div class="container-fluid">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Dodaj transakcje</a></li>
-				<li><a href="#">Lista transakcji</a></li>
+				<li class="active"><a href="#">Dodaj naprawe</a></li>
+				<li><a href="#">Lista napraw</a></li>
 				<li><a href="#">Notatki</a></li>
 			</ul>
 			</div>
@@ -49,23 +49,60 @@
 		</div>
 	</div> 
 			
+			  <div class="form-group">		
 			
-		<label>telefon do klienta</label> 
-		<input type="text" th:field="*{phoneNumber}" /> 
-			  
-	<label>Email klienta</label> <input type="text" th:field="*{clientmail}" />
-	 <label>koszt</label>
-			   
-		<input type="text" th:field="*{price}" />
-		 <label>numer seryjny</label> <input type="text" th:field="*{serialNumber}" /> 
+		<label class="col-sm-2 control-label" >telefon do klienta</label> 
+		<div class="col-sm-10">
+		<input  class="form-control" type="text" th:field="*{phoneNumber}" /> 
+		</div>	  
+		</div>
+		
+		
+    <div class="form-group">		
+	<label class="col-sm-2 control-label">Email klienta</label>
+	<div  class="col-sm-10">
+	 <input class="form-control" type="text" th:field="*{clientmail}" />
+	</div>
+</div>
+
+	
+	    <div class="form-group">		
+
+	 <label class="col-sm-2 control-label">koszt</label>
+	 <div  class="col-sm-10">
+		<input class="form-control" type="text" th:field="*{price}" />
+		</div>
+		</div>
+		
+			    <div class="form-group">		
+		 <label class="col-sm-2 control-label">numer seryjny</label> 
+		 	 <div  class="col-sm-10">
+		 <input class="form-control" type="text" th:field="*{serialNumber}" /> 
+		 </div>
+		 		</div>
 		 
-		 <label>uwagi</label>
-		<input type="text" th:field="*{comments}" />  
+		 		    <div class="form-group">		
 		
-		<label>model</label>
-		<input type="text" th:field="*{model}" />
+		<label class="col-sm-2 control-label">model</label>
+				 <div  class="col-sm-10">
 		
-		 <input type="submit" value="dodaj" />
+		<input class="form-control" type="text" th:field="*{model}" />
+		</div>
+				</div>
+		 
+		 			    <div class="form-group">		
+		 <label class="col-sm-2 control-label">uwagi</label>
+		 <div  class="col-sm-10">
+		<textarea class="form-control" rows="3" type="textare" th:field="*{comments}" />  
+				 		</div>
+		</div>
+		
+		
+				 	
+						 			    <div class="form-group">		
+		
+		 <input class="btn pull-right" type="submit" value="dodaj" />
+	</div>
 	</form>
 	</main>
 </body>
