--- a/src/main/resources/templates/addTransactionForm.html
+++ b/src/main/resources/templates/addTransactionForm.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org/">
 <head>
 <meta charset="UTF-8" />
-<title>Insert title here</title>
+<title>Dodaj naprawe</title>
 <link 
 	th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet" />
 	
@@ -24,11 +24,13 @@
 		 <div class="container-fluid">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#">Dodaj naprawe</a></li>
-				<li><a href="#">Lista napraw</a></li>
+				<li><a href="/serwis/allRepairs">Lista napraw</a></li>
 				<li><a href="#">Notatki</a></li>
 			</ul>
 			</div>
 		</nav>
+		
+	
 	</header>
 
 	<main class="container">
@@ -89,6 +91,21 @@
 		<input class="form-control" type="text" th:field="*{model}" />
 		</div>
 				</div>
+		 
+		 		    <div class="form-group">		
+		 <label class="col-sm-2 control-label">status naprawy</label>
+		 <div  class="col-sm-10">
+<select class="form-control" th:field="*{status}" >  		
+ <option value="oczekujaca">oczekujaca</option>
+  <option value="w trakcie">w trakcie</option>
+  <option value="zakonczona">zakonczona</option>
+
+		
+		</select>
+				 		</div>
+		</div>
+		 
+		 
 		 
 		 			    <div class="form-group">		
 		 <label class="col-sm-2 control-label">uwagi</label>
