--- a/src/main/resources/templates/addTransactionForm.html
+++ b/src/main/resources/templates/addTransactionForm.html
@@ -43,6 +43,7 @@
 	
 	</header>
 	
+<div class="container" style="width: 900px; margin-left: auto; margin-right: auto;">
 
 
 	<form class="form-horizontal" method="post" action="" th:object="${tr}">
@@ -132,5 +133,7 @@
 		 <input class="btn pull-right" type="submit" value="dodaj" />
 	</div>
 	</form>
+	
+	</div>
 </body>
 </html>
