--- a/src/main/resources/templates/TransactionsList.html
+++ b/src/main/resources/templates/TransactionsList.html
@@ -10,15 +10,22 @@
 <script th:src="@{/js/bootstrap.min.js}"></script>
 
 <script>
+	function toggle_visibility(id) {
+		var e = document.getElementById(id);
+		if (e.style.display == 'block')
+			e.style.display = 'none';
+		else
+			e.style.display = 'block';
+	}
 
-$(window).scroll(function() {
-	  sessionStorage.scrollTop = $(this).scrollTop();
+	$(window).scroll(function() {
+		sessionStorage.scrollTop = $(this).scrollTop();
 	});
 
 	$(document).ready(function() {
-	  if (sessionStorage.scrollTop != "undefined") {
-	    $(window).scrollTop(sessionStorage.scrollTop);
-	  }
+		if (sessionStorage.scrollTop != "undefined") {
+			$(window).scrollTop(sessionStorage.scrollTop);
+		}
 	});
 </script>
 
@@ -26,6 +33,7 @@ $(window).scroll(function() {
 <body>
 
 	<header>
+			
 		<div class="row">
 			<div class="center col-md-6 text-center"
 				style="font-size: 40px; margin-top: 60px;">System serwisu
@@ -45,19 +53,102 @@ $(window).scroll(function() {
 						data-toggle="dropdown" href="#">Lista napraw<span
 							class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="/serwis/allRepairs">Wszystkie naprawy</a></li>
+							<li class="active"><a href="/serwis/allRepairs">Wszystkie naprawy</a></li>
 							<li><a href="#">Oczekujące naprawy</a></li>
 							<li><a href="#">Bieżące naprawy</a></li>
 							<li><a href="#">Zakonczone naprawy</a></li>
 						</ul></li>
-						  <li><a href="#">Notatki</a></li>
+					<li><a href="#">Notatki</a></li>
 				</ul>
 			</div>
 		</nav>
-		
 
 	
+
 	</header>
+	
+	<button class="btn btn-info" style="margin-bottom: 10px; margin-left: 90px" id="hide" onclick="toggle_visibility('filtry');">Opcje filtrowania: pokaz/ukryj</button>
+
+		<div id="filtry" class="row"
+			style="width: 1200px; display:none; margin-left: auto; margin-right: auto; padding-bottom: 10px;">
+			<div id="searchByprice" class="col-xs-6 col-sm-4">
+				Filtruj po cenie
+				<form class="form-horizontal">
+					<div class="form-group">
+						<div class="col-sm-10">
+							<input type="email" class="form-control" id="inputEmail3"
+								placeholder="Minimalny koszt" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-10">
+							<input type="password" class="form-control" id="inputPassword3"
+								placeholder="Maksymalny koszt" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-offset-2 col-sm-10">
+							<button type="submit" class="btn btn-default"
+								style="margin-left: 175px;">Filtruj</button>
+						</div>
+					</div>
+				</form>
+
+
+			</div>
+
+
+			<div id="searchBySerial" class="col-xs-6 col-sm-4">
+				Filtruj po dacie
+				<form class="form-horizontal">
+					<div class="form-group">
+						<div class="col-sm-10">
+							<input type="email" class="form-control" id="inputEmail3"
+								placeholder="Data poczatkowa" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-10">
+							<input type="password" class="form-control" id="inputPassword3"
+								placeholder="Data koncowa" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-offset-2 col-sm-10">
+							<button type="submit" class="btn btn-default"
+								style="margin-left: 175px;">Filtruj</button>
+						</div>
+					</div>
+				</form>
+
+
+
+
+			</div>
+			<!-- Optional: clear the XS cols if their content doesn't match in height -->
+			<div class="clearfix visible-xs-block"></div>
+			<div class="col-xs-6 col-sm-4">
+				Wyszukaj
+				<form class="form-horizontal">
+					<div class="form-group">
+						<div class="col-sm-10">
+							<input type="email" class="form-control" id="inputEmail3"
+								placeholder="Cokolwiek" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-offset-2 col-sm-10">
+							<button type="submit" class="btn btn-default"
+								style="margin-left: 175px;">Szukaj</button>
+						</div>
+					</div>
+				</form>
+
+
+			</div>
+		</div>
+	
+	
 	<div style="width: 1100px; margin-left: auto; margin-right: auto;">
 
 		<table class="table">
@@ -80,13 +171,17 @@ $(window).scroll(function() {
 				<td th:text="${tr.clientLastName}"></td>
 				<td th:text="${tr.price}"></td>
 				<td th:text="${tr.model}"></td>
-				
-				<td th:if="${tr.startDate != null}" th:text="${#dates.format(tr.startDate, 'dd-MMM-yyyy')}"></td>
-				<td th:if="${tr.startDate == null}"><span style="margin-left: 30px">-</span></td>
-				
-				
-				<td th:if="${tr.endDate != null}" th:text="${#dates.format(tr.endDate, 'dd-MMM-yyyy')}"></td>
-				<td th:if="${tr.endDate == null}"><span style="margin-left: 30px">-</span></td>
+
+				<td th:if="${tr.startDate != null}"
+					th:text="${#dates.format(tr.startDate, 'dd-MMM-yyyy')}"></td>
+				<td th:if="${tr.startDate == null}"><span
+					style="margin-left: 30px">-</span></td>
+
+
+				<td th:if="${tr.endDate != null}"
+					th:text="${#dates.format(tr.endDate, 'dd-MMM-yyyy')}"></td>
+				<td th:if="${tr.endDate == null}"><span
+					style="margin-left: 30px">-</span></td>
 				<td>
 					<!-- szybka zmiana stanu -->
 					<form th:method="post" action="/serwis/updateOne">
@@ -101,7 +196,8 @@ $(window).scroll(function() {
 
 
 				</td>
-				<td><a th:href="@{/serwis/repairDetails/{id}(id=${tr.id})}"> szczegóły</a></td>
+				<td><a th:href="@{/serwis/repairDetails/{id}(id=${tr.id})}">
+						szczegóły</a></td>
 			</tr>
 
 
