--- a/src/main/resources/templates/TransactionsList.html
+++ b/src/main/resources/templates/TransactionsList.html
@@ -73,16 +73,18 @@
 			style="width: 1200px; display:none; margin-left: auto; margin-right: auto; padding-bottom: 10px;">
 			<div id="searchByprice" class="col-xs-6 col-sm-4">
 				Filtruj po cenie
-				<form class="form-horizontal">
+				<form class="form-horizontal" method="POST" 
+				action="/serwis/allRepairs/filterByCost">
+				<input type="hidden" name="state" value="all"/>
 					<div class="form-group">
 						<div class="col-sm-10">
-							<input type="email" class="form-control" id="inputEmail3"
+							<input name="min" type="text" class="form-control" id="min"
 								placeholder="Minimalny koszt" />
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="inputPassword3"
+							<input name="max" type="text" class="form-control" id="max"
 								placeholder="Maksymalny koszt" />
 						</div>
 					</div>
