--- a/src/main/resources/templates/TransactionsList.html
+++ b/src/main/resources/templates/TransactionsList.html
@@ -53,12 +53,15 @@
 						data-toggle="dropdown" href="#">Lista napraw<span
 							class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="/serwis/allRepairs">Wszystkie
+							<li><a href="/serwis/allRepairs">Wszystkie naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/oczekujaca">Oczekujące
 									naprawy</a></li>
-							<li><a href="/serwis/filterByStatus/oczekujaca">Oczekujące naprawy</a></li>
-							<li><a href="/serwis/filterByStatus/w trakcie">Bieżące naprawy</a></li>
-							<li><a href="/serwis/filterByStatus/zakonczona">Zakonczone naprawy</a></li>
-							<li><a href="/serwis/filterByStatus/nieodbyta">Nieodbyte naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/w trakcie">Bieżące
+									naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/zakonczona">Zakonczone
+									naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/nieodbyta">Nieodbyte
+									naprawy</a></li>
 						</ul></li>
 					<li><a href="#">Notatki</a></li>
 				</ul>
@@ -80,11 +83,14 @@
 			Filtruj po cenie
 			<form class="form-horizontal" method="POST"
 				action="/serwis/allRepairs/filterByCost">
-				<input type="hidden" name="state" 
-				
-				value="all" 
-				
-				/>
+				<div th:switch="${#httpServletRequest.requestURI}">
+					<input th:case="'/serwis/allRepairs'" type="hidden" name="state" value="all" />
+					<input th:case="'/serwis/filterByStatus/oczekujaca'" type="hidden" name="state" value="oczekujaca" />
+					<input th:case="'/serwis/filterByStatus/w%20trakcie'" type="hidden" name="state" value="w trakcie" />
+					<input th:case="'/serwis/filterByStatus/zakonczona'" type="hidden" name="state" value="zakonczona" />
+					<input th:case="'/serwis/filterByStatus/nieodbyta'" type="hidden" name="state" value="nieodbyta" />
+				</div>
+
 				<div class="form-group">
 					<div class="col-sm-10">
 						<input name="min" type="text" class="form-control" id="min"
