--- a/src/main/resources/templates/TransactionDetails.html
+++ b/src/main/resources/templates/TransactionDetails.html
@@ -34,14 +34,20 @@
 							class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/serwis/allRepairs">Wszystkie naprawy</a></li>
-							<li><a href="#">Oczekujące naprawy</a></li>
-							<li><a href="#">Bieżące naprawy</a></li>
-							<li><a href="#">Zakonczone naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/oczekujaca">Oczekujące
+									naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/w trakcie">Bieżące
+									naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/zakonczona">Zakonczone
+									naprawy</a></li>
+							<li><a href="/serwis/filterByStatus/nieodbyta">Nieodbyte
+									naprawy</a></li>
 						</ul></li>
-					<li><a href="#">Notatki</a></li>
+					<li><a href="/serwis/notes">Notatki</a></li>
 				</ul>
 			</div>
 		</nav>
+
 
 
 	</header>
