--- a/src/main/resources/templates/addTransactionForm.html
+++ b/src/main/resources/templates/addTransactionForm.html
@@ -36,7 +36,7 @@
 							<li><a href="#">Bieżące naprawy</a></li>
 							<li><a href="#">Zakonczone naprawy</a></li>
 						</ul></li>
-						  <li><a href="#">Notatki</a></li>
+						  <li><a href="/serwis/notes">Notatki</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -122,7 +122,7 @@
 		 			    <div class="form-group">		
 		 <label class="col-sm-2 control-label">uwagi</label>
 		 <div  class="col-sm-10">
-		<textarea class="form-control" rows="3" type="textare" th:field="*{comments}" />  
+		<textarea class="form-control" rows="3" type="textarea" th:field="*{comments}" />  
 				 		</div>
 		</div>
 		
