--- a/src/main/resources/templates/addTransactionForm.html
+++ b/src/main/resources/templates/addTransactionForm.html
@@ -122,7 +122,7 @@
 		 			    <div class="form-group">		
 		 <label class="col-sm-2 control-label">uwagi</label>
 		 <div  class="col-sm-10">
-		<textarea class="form-control" rows="3" type="textarea" th:field="*{comments}" />  
+		<textarea class="form-control" rows="3" type="textarea" th:field="*{comments}" ></textarea>  
 				 		</div>
 		</div>
 		
