--- a/src/main/resources/templates/TransactionsList.html
+++ b/src/main/resources/templates/TransactionsList.html
@@ -124,7 +124,20 @@
 			Filtruj po dacie
 			<form method="POST" action="/serwis/allRepairs/filterByDate"
 				class="form-horizontal">
-				<input type="hidden" name="state" value="all" />
+				
+				<div th:switch="${#httpServletRequest.requestURI}">
+					<input th:case="'/serwis/allRepairs'" type="hidden" name="state"
+						value="all" /> <input
+						th:case="'/serwis/filterByStatus/oczekujaca'" type="hidden"
+						name="state" value="oczekujaca" /> <input
+						th:case="'/serwis/filterByStatus/w%20trakcie'" type="hidden"
+						name="state" value="w trakcie" /> <input
+						th:case="'/serwis/filterByStatus/zakonczona'" type="hidden"
+						name="state" value="zakonczona" /> <input
+						th:case="'/serwis/filterByStatus/nieodbyta'" type="hidden"
+						name="state" value="nieodbyta" />
+				</div>
+				
 				<div class="form-group">
 					<div class="col-sm-10">
 						<input name="startDate" type="date" class="form-control"
@@ -153,11 +166,11 @@
 		<div class="clearfix visible-xs-block"></div>
 		<div class="col-xs-6 col-sm-4">
 			Wyszukaj
-			<form class="form-horizontal">
+			<form class="form-horizontal" method="POST" action="/serwis/search">
 				<div class="form-group">
 					<div class="col-sm-10">
-						<input type="email" class="form-control" id="inputEmail3"
-							placeholder="Cokolwiek" />
+						<input name="text" type="text" class="form-control" id=""
+							placeholder="" />
 					</div>
 				</div>
 				<div class="form-group">
