--- a/src/main/resources/templates/TransactionDetails.html
+++ b/src/main/resources/templates/TransactionDetails.html
@@ -117,6 +117,9 @@
 						style="background-color: transparent; border: none; cursor: pointer; cursor: hand;" />
 				</form>
 			</div>
+				<div class="col-xs-6 col-sm-3">
+				<a th:href="@{/serwis/generate/{id}(id=${tr.id})}">Pobierz potwierdzenie</a>
+			</div>
 	
 
 
